# fetch-ai

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.db  README.md  agent.py  docker-compose.yml  endpoint_tests.py  main.py  pdf_parser.py  pyproject.toml  requirements.txt  test.json
agent/: agent.py  chat.py  embedder.py  retriever.py  supabase_retriever.py
auth/: auth.py
chroma_store/: chroma.sqlite3
front-end/: package-lock.json  package.json
front-end/src/: context.tsx  upload-button.tsx
front-end/src/app/: chat-sidebar.tsx  chat.tsx  format-response.tsx  globals.css  input-field.tsx  layout.tsx  navbar-new.tsx  navbar.tsx  page.tsx  settings-dropdown.tsx  sidebar.tsx  upload-button.tsx  upload-metadata-modal.tsx  upload-suggestion-modal.tsx
front-end/src/app/api/auth/[...auth]/: route.ts
front-end/src/app/api/auth/[auth]/: route.ts
front-end/src/app/api/auth/token/: route.ts
front-end/src/app/chat/[chatId]/: page.tsx
front-end/src/app/docs/: page.tsx
front-end/src/app/types/: chat.ts
front-end/src/context/: DocumentsContext.tsx
front-end/src/lib/: auth0.ts  utils.ts
parser/: pattern_recognition.py  pdf_parser.py
routes/: routes.py
