[tool.poetry]
name = "docsai"
version = "0.1.0"
description = "AI-powered documentation assistant"
authors = ["Josh Kung"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.93.0"
dotenv = "^0.9.9"
certifi = "^2025.6.15"
requests = "^2.32.4"
chromadb = "^1.0.15"
pymupdf = "^1.26.3"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
pillow = "^11.3.0"
tiktoken = "^0.7.0"
spacypdfreader = "^0.3.2"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pytest = "^8.4.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
